...
"cards__transferClosingChannel__title" = "Initiating";
"cards__transferClosingChannel__description" = "Keep app open";
"cards__pin__title" = "Secure";
"cards__pin__description" = "Set up a PIN code";
"cards__shop__title" = "Shop";
"cards__shop__description" = "Shop with Bitcoin";
"cards__slashtagsProfile__title" = "Profile";
"cards__slashtagsProfile__description" = "Add your details";
"cards__support__title" = "Support";
"cards__support__description" = "Get assistance";
"cards__buyBitcoin__title" = "Buy";
"cards__buyBitcoin__description" = "Buy some bitcoin";
"cards__btFailed__title" = "Failed";
...
"lightning__external_manual__title" = "<accent>Manual setup</accent>";
"lightning__external_manual__text" = "You can use an external node to manually open a Lightning connection. Enter the node details to continue.";
"lightning__external_manual__node_id" = "Node ID";
"lightning__external_manual__host" = "Host";
"lightning__external_manual__port" = "Port";
"lightning__external_manual__paste" = "Paste Node URI";
"lightning__external_manual__scan" = "Scan QR";
"lightning__external_amount__title" = "Spending\n<accent>balance</accent>";
"lightning__external_success__title" = "Connection\n<accent>initiated</accent>";
"lightning__external_success__text" = "Lightning connection initiated. You will be able to use your spending balance in <accent>±30 minutes</accent> (depends on node configuration).";
"lightning__error_channel_purchase" = "Instant Payments Setup Failed";
"lightning__error_channel_setup_msg" = "An error occurred when setting up your instant balance. {raw}";
"lightning__error_channel_receiving" = "Receiving amount needs to be greater than ${usdValue}";
...
"security__authorization__claims" = "This service claims to be";
"security__authorization__requested_permissions" = "Requested Permissions";
"security__authorization__pubky_secret_error_title" = "Pubky Error";
"security__authorization__pubky_secret_error_description" = "Unable to retrieve Pubky key";
"security__authorization__pubky_auth_error_title" = "Pubky Auth Error";
"security__authorization__pubky_auth_error_description" = "Unable to auth with Pubky service";
"settings__settings" = "Settings";
"settings__dev_enabled_title" = "Dev Options Enabled";
"settings__dev_enabled_message" = "Developer options are now enabled throughout the app.";
"settings__dev_disabled_title" = "Dev Options Disabled";
"settings__dev_disabled_message" = "Developer options are now disabled throughout the app.";
"settings__general_title" = "General";
"settings__security_title" = "Security and Privacy";
...
"settings__support__status" = "App Status";
"settings__support__report_text" = "Please describe the issue you are experiencing or ask a general question.";
"settings__support__label_address" = "Email address";
"settings__support__label_message" = "Issue or question";
"settings__support__placeholder_address" = "satoshi@satoshi.com";
"settings__support__placeholder_message" = "Describe the issue or ask a question";
"settings__support__text_button" = "Send";
"settings__support__title_success" = "Sent Successfully";
"settings__support__text_success" = "Thank you for contacting us! We will try to get back to you as soon as possible.";
"settings__support__text_success_button" = "OK";
"settings__support__title_unsuccess" = "Failed To Send";
"settings__support__text_unsuccess" = "Something went wrong while trying to send your issue or question. Please try again.";
"settings__support__text_unsuccess_button" = "Try Again";
...
"settings__status__internet__title" = "Internet";
"settings__status__internet__ready" = "Connected";
"settings__status__internet__pending" = "Reconnecting...";
"settings__status__internet__error" = "Disconnected";
"settings__status__electrum__title" = "Bitcoin Node";
"settings__status__electrum__ready" = "Connected";
"settings__status__electrum__pending" = "Connecting...";
"settings__status__electrum__error" = "Could not connect to Electrum";
"settings__status__lightning_node__title" = "Lightning Node";
"settings__status__lightning_node__ready" = "Synced";
"settings__status__lightning_node__pending" = "Syncing...";
"settings__status__lightning_node__error" = "Could not initiate";
"settings__status__lightning_connection__title" = "Lightning Connection";
...
"settings__wr__error_url" = "Please specify a URL to connect to.";
"settings__wr__error_https" = "Not a valid HTTPS url.";
"settings__wr__error_healthcheck" = "Healthcheck Failed";
"settings__wr__url_updated_title" = "Web Relay Updated";
"settings__wr__url_updated_message" = "Successfully connected to {url}";
"slashtags__your_name" = "Your name";
"slashtags__your_name_capital" = "Your Name";
"slashtags__contact_name" = "Contact Name";
"slashtags__contact" = "Contact";
"slashtags__contacts" = "Contacts";
"slashtags__contact_add" = "Add contact";
"slashtags__contact_add_capital" = "Add Contact";
"slashtags__contact_add_explain" = "Add a new contact by scanning their QR or by pasting their key below.";
...
